# wordsmith-cli

./: .env.example  .eslintrc  .gitignore  .npmrc  .releaserc.json  .swcrc  Cargo.toml  README.md  build.rs  clippy.toml  composer.json  config.json  debug.env  package-lock.json  package.json  readme.md  release.env  test.txt  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts  vite.config.ts  wordsmith.config.json  wordsmith.example.yml
.github/workflows/: push.yml  release.yml  test.yml
composer/: Wordsmith.php  WordsmithCLI.php  WordsmithException.php  wordsmith
npm/: index.ts
scripts/: composer-pack  get-next-version.js  update-versions-prepare.js  update-versions-verify.js
src/: CLI.ts  Config.ts  Repository.ts  Storage.ts  StorageTranslation.ts  StorageTranslationCollection.ts  Translation.ts  TranslationCollection.ts  cli.rs  command.ts  completions.rs  config.ts  environment.rs  index.ts  main.rs  main.ts  repository.ts  translation-service.ts
src/api/: info.rs  list.rs  list_projects.rs  mod.rs  pull.rs  push.rs
src/api/models/: error.rs  list.rs  mod.rs  project.rs  pull.rs  push.rs  role.rs  user.rs
src/clients/: axios.ts  fetch.ts
src/commands/: completions.rs  helpers.rs  init.ts  list.rs  list_projects.rs  mod.rs  pull.rs  pull.ts  push.rs  push.ts
src/contracts/: client.ts  translation.ts
src/extensions/: json.ts
src/filesystem/: language.ts  storage.ts
src/filesystem/files/: file.ts  i18next.ts  index.ts  json.ts  laravel.ts
src/formats/: json.ts
src/misc/: actions.ts  config.ts  enums.ts  helpers.ts
src/models/: list.ts  translation-value.ts  translation.ts
src/types/: globals.d.ts
tests/: storage_translation.test.js  storage_translation_collection.test.js  translation.test.js  translation_collection.test.js
tests/__snapshots__/: storage_translation.test.js.snap  storage_translation_collection.test.js.snap  translation.test.js.snap  translation_collection.test.js.snap
tests/unit/filesystem/: language.test.ts
